# Cross-Platform-Game-Engine

./: CMakeLists.txt  README.md  Skybox Game.sln  Skybox Game.vcxproj  Skybox Game.vcxproj.filters  Source.cpp  camera.h  color_changing.fs  flower_left.h  flower_lower.h  flower_right.h  icosphere.cbp  light_pink.fs  light_purple.fs  petal.h  references.md  root_directory.h  simpleFS.fs  simpleVS.vs  skybox.vs  source.cpp  ufo.h
Code Sample/Geometry/: pen_body.h
Code Sample/Source/: geometry.cpp  objects.h
Cross Platform Game Engine 2.0/: CMakeLists.txt
Cross Platform Game Engine 2.0/src/sa/app/: SheraAdamsProject330.sln  SheraAdamsProject330.vcxproj  SheraAdamsProject330.vcxproj.filters  app.cpp  pen_accent.h  texture.cpp
Engine 1.0 Windows/SWE_Enhanced/: SWE_Enhanced.sln  SWE_Enhanced.vcxproj  SWE_Enhanced.vcxproj.filters  Source.cpp  geometry.h  objects.cpp  pen_accent.h  pen_point.h  stb_image.h  texture.cpp  texture.h
Engine 1.0 Windows/SWE_Enhanced/x64/Debug/: SWE_Enhanced.exe.recipe  SWE_Enhanced.exp  SWE_Enhanced.lib  SWE_Enhanced.vcxproj.FileListAbsolute.txt  vc143.idb
Engine 1.0 Windows/SWE_Enhanced/x64/Debug/SWE_Enhanced.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SWE_Enhanced.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
